...

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBack"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="40dp"
...

                <EditText
                    android:id="@+id/etEventName"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
...

                <EditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
...

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroupLabels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                        <ImageView
                            android:id="@+id/ivEventImage"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
...

                        <ImageView
                            android:id="@+id/ivAddImage"
                            android:layout_width="28dp"
                            android:layout_height="28dp"
...

                            <Button
                                android:id="@+id/btnStartDate"
                                style="@style/Widget.Material3.Button.TextButton"
                                android:layout_width="0dp"
...

                            <Button
                                android:id="@+id/btnStartTime"
                                style="@style/Widget.Material3.Button.TextButton"
                                android:layout_width="wrap_content"
...

                            <Button
                                android:id="@+id/btnEndDate"
                                style="@style/Widget.Material3.Button.TextButton"
                                android:layout_width="0dp"
...

                            <Button
                                android:id="@+id/btnEndTime"
                                style="@style/Widget.Material3.Button.TextButton"
                                android:layout_width="wrap_content"
...

                            <Button
                                android:id="@+id/btnRegistrationOpens"
                                style="@style/Widget.Material3.Button.OutlinedButton"
                                android:layout_width="match_parent"
...

                            <Button
                                android:id="@+id/btnRegistrationCloses"
                                style="@style/Widget.Material3.Button.OutlinedButton"
                                android:layout_width="match_parent"
...

                        <EditText
                            android:id="@+id/etUnresponsiveHours"
                            android:layout_width="60dp"
                            android:layout_height="36dp"
...

                        <EditText
                            android:id="@+id/etDrawCapacity"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
...

                        <EditText
                            android:id="@+id/etWaitingList"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
...

                        <EditText
                            android:id="@+id/etLatitude"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
...

                        <EditText
                            android:id="@+id/etLongitude"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
...

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switchGeolocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/etPrice"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
...
